objects/National_Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>National_On_boarding_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Transition_Date__c</fullName>
        <label>Account Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accts_Moved_from_STRAT_to_SPLIT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Update YL Marketing Consultant
Update YL RM &amp; Manager
Double check updates to SF</inlineHelpText>
        <label>6. Accts Moved from STRAT to SPLIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Any additional information that may help us with the above estimates.</inlineHelpText>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Lead_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Lead Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Policies_or_Terms_C__c</fullName>
        <label>Additional Policies or Terms C</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Policies_or_Terms_Sales__c</fullName>
        <formula>Additional_Policies_or_Terms__c</formula>
        <label>Additional Policies or Terms-Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Policies_or_Terms__c</fullName>
        <label>Additional Policies or Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Services__c</fullName>
        <label>Additional Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advertising_Goals__c</fullName>
        <label>Advertising Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_other_technology_requests__c</fullName>
        <label>Any other technology requests?</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_by_CS__c</fullName>
        <label>Approval by CS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_by_Finance__c</fullName>
        <label>Approval by Finance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_by_Legal__c</fullName>
        <label>Approval by Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_by_Product__c</fullName>
        <label>Approval by Product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_by_Sales__c</fullName>
        <label>Approval by Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_out_of_box_requirements__c</fullName>
        <label>Approval out of box requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Ad_Copy__c</fullName>
        <label>Ad Copy Approval Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Local_Bus_Listings_Previously_Claime__c</fullName>
        <inlineHelpText>Mandatory for SEO Evaluation Request</inlineHelpText>
        <label>Are Local BusListings Previously Claimed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_maps_listings_claimed__c</fullName>
        <label>Are maps listings claimed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_out_of_box_requirements__c</fullName>
        <label>Are there out of box requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Order_Value__c</fullName>
        <inlineHelpText>Average order value/value per customer</inlineHelpText>
        <label>Average Order Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Date__c</fullName>
        <label>Bill Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <label>Billing Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Details__c</fullName>
        <label>Billing Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPC Budget Estimate ($)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Estimates__c</fullName>
        <inlineHelpText>attach estimate and provide summary</inlineHelpText>
        <label>Budget Estimates</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Info_Feed__c</fullName>
        <label>Business Info Feed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>business info feed</fullName>
                </value>
                <value>
                    <fullName>owner verified business location upload</fullName>
                </value>
                <value>
                    <fullName>they do not have either</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_3rd_Party_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRM/3rd Party Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Integration_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRM Integration Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Intgrtn_3rd_Prty_Trcking_Viability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRM Intgrtn &amp; 3rd Prty Trcking Viability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Recording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaigns__c</fullName>
        <label>Campaigns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Support_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Side_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Side Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>National Support Requests</relationshipLabel>
        <relationshipName>National_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Support_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Services_recommended_support__c</fullName>
        <label>Client Services Recommended Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>corporate communication only – reactive local support</fullName>
                </value>
                <value>
                    <fullName>corporate communication -standard proactive communication at the consultant level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Side_Organic_Estimates__c</fullName>
        <label>Client Side Organic Estimates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Side__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Side:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Use_CRM__c</fullName>
        <inlineHelpText>Does the client use any CRM tools or other lead management programs?</inlineHelpText>
        <label>Client Use CRM Currently?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_s_Goal_Expectations__c</fullName>
        <label>Client's Goal/Expectations</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_we_can_complete_client_side_seo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm We Can Complete Client Side SEO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirmation we can complete client side (to be completed by Implementation Specialist):</inlineHelpText>
        <label>Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_Sales__c</fullName>
        <label>Contract Approved Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_by_CS__c</fullName>
        <label>Contract Approved by CS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_by_Finance__c</fullName>
        <label>Contract Approved by Finance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_by_Legal__c</fullName>
        <label>Contract Approved by Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_by_Product__c</fullName>
        <label>Contract Approved by Product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_by_Sales__c</fullName>
        <label>Contract Approved by Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Attached_and_Ready_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Attached and Ready for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <label>Contract Length</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_rate_from_lead_to_sale__c</fullName>
        <label>Conversion rate from lead to sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_SEO_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate SEO Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Website_Domain__c</fullName>
        <label>Corporate Website Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_per_acquisition__c</fullName>
        <label>Cost per acquisition by marketing type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Budget__c</fullName>
        <label>Current Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_PPL__c</fullName>
        <label>Current PPL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Relationships_with_Franchises__c</fullName>
        <inlineHelpText>If so, please note the IMS servicing the accounts in the notes field at the bottom of this form.</inlineHelpText>
        <label>Current # Franchises as Customers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Total_Spend__c</fullName>
        <label>Current Total Spend (SEM)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Reporting__c</fullName>
        <label>Custom Reporting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Template:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Opt_Completed__c</fullName>
        <label>Date Opt Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Required__c</fullName>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Meeting_with_Prospect__c</fullName>
        <inlineHelpText>This will help us prioritize your request and ensure we have the information back to you in time for your meeting.</inlineHelpText>
        <label>Date of Next Meeting with Prospect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Date__c</fullName>
        <label>Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_out_of_box_requirements__c</fullName>
        <label>Describe out of box requirements</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Ideal_PPL__c</fullName>
        <label>Desired/Ideal PPL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determine_Transition_Call_Staffing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should include:
Strategic Member(s)
RM
Lead Consultant
Lead Analyst</inlineHelpText>
        <label>4. Determine Transition Call Staffing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you need estimate requests for display.</inlineHelpText>
        <label>Display Evaluation and Budget Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_We_Have_a_Relationship_with_Corp__c</fullName>
        <label>Do We Have a Relationship with Corp?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_they_use_CRM__c</fullName>
        <label>Do they use CRM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_they_use_an_SEO_vendor__c</fullName>
        <label>Do they use an SEO vendor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain_Name_Rules__c</fullName>
        <label>Domain Name Rules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Deal__c</fullName>
        <label>Estimated Initial Deal Value ($)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_In__c</fullName>
        <label>Estimated Potential Deal Value ($)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_locations__c</fullName>
        <label>Estimated Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Recurring_Revenue__c</fullName>
        <label>Estimated Recurring Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Reoccuring_Revenue__c</fullName>
        <formula>((Setup_Fee_per_location__c + MMF_per_location__c + Organic_per_location__c ) *  Estimated_Number_locations__c ) +  Total_Sponsored_Budgets__c</formula>
        <label>Estimated Reoccuring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_of_Decision_Making_C__c</fullName>
        <label>Expected Time of Decision Making C</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Launch_Date__c</fullName>
        <label>Expected Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_time_of_decision_making_Sales__c</fullName>
        <formula>Expected_time_of_decision_making__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected time of decision making-Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_time_of_decision_making__c</fullName>
        <label>Expected time of decision making</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Business_Name__c</fullName>
        <inlineHelpText>The Franchise or Business name that best describes this client. e.g. Two Men And A Truck or Bob's Taco Stand.</inlineHelpText>
        <label>Franchise/Business Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Dealer_URL__c</fullName>
        <label>Franchise/Dealer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Franchisee_Territories__c</fullName>
        <label>Franchisee Territories</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>defined territories not clustered</fullName>
                </value>
                <value>
                    <fullName>defined territories clustered</fullName>
                </value>
                <value>
                    <fullName>undefined territories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Distribution_Type__c</fullName>
        <label>Funding Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Parent Pays</fullName>
                </value>
                <value>
                    <fullName>BirdFeed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Restrictions_Territory__c</fullName>
        <label>Geo Restrictions/Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Region Based</fullName>
                </value>
                <value>
                    <fullName>Zip Code Based</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_this_client_used_Adwords_in_the_past__c</fullName>
        <label>Has this client used Adwords in the past</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_this_client_used_a_competitor__c</fullName>
        <label>Has this client used a competitor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_is_local_marketing_funded__c</fullName>
        <label>How is local marketing funded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>preferred vendor</fullName>
                </value>
                <value>
                    <fullName>parent pays</fullName>
                </value>
                <value>
                    <fullName>mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_do_promotions_change__c</fullName>
        <inlineHelpText>How often do promotions or coupons change</inlineHelpText>
        <label>How often do promotions change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_will_locations_be_solicited__c</fullName>
        <label>How will locations be solicited?</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Completing_Opt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IMS Completing Opt</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Support_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_they_use_CRM_what_kind_and_how__c</fullName>
        <label>If they use CRM, what kind and how?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <label>Implementation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Budget_per_Location__c</fullName>
        <label>Initial Budget per Location ($)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_This_Bottoms_Up__c</fullName>
        <label>Is This Bottoms Up?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_test__c</fullName>
        <label>Is this a test?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keyword_1__c</fullName>
        <label>Keyword 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keyword_2__c</fullName>
        <label>Keyword 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keyword_3__c</fullName>
        <label>Keyword 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keywords_to_scrape__c</fullName>
        <inlineHelpText>(separate by commas)</inlineHelpText>
        <label>Keywords to scrape</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_of_All_Locations__c</fullName>
        <inlineHelpText>attach list or include link</inlineHelpText>
        <label>List of All Locations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Local_Marketing_Budget__c</fullName>
        <label>Local Marketing Budget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Website_Structure__c</fullName>
        <label>Local Website Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Website</fullName>
                </value>
                <value>
                    <fullName>Subfolders</fullName>
                </value>
                <value>
                    <fullName>No Local Sites</fullName>
                </value>
                <value>
                    <fullName>Sub Domains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_domain_naming_convention__c</fullName>
        <label>Local domain naming convention</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MMF_per_Location_C__c</fullName>
        <label>Yodle Web Fee per Location C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_per_location__c</fullName>
        <formula>Proposed_Pricing_MMF_per_Location__c</formula>
        <label>MMF (per location)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Corporate_Requested_Touch__c</fullName>
        <inlineHelpText>Manufacturer Only - Manufacturer touch points may vary depending on corporate level of involvement. Please indicate what corporate would like to participate in based on the touch points offered for their tier.</inlineHelpText>
        <label>Corporate Requested Touch Points</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>National_Relationship_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate kick off call</fullName>
                </value>
                <value>
                    <fullName>Project plan and campaign strategy</fullName>
                </value>
                <value>
                    <fullName>Weekly onboarding status report</fullName>
                </value>
                <value>
                    <fullName>Franchisee launch webinar</fullName>
                </value>
                <value>
                    <fullName>Corporate master franchise walkthrough</fullName>
                </value>
                <value>
                    <fullName>Monthly corporate performance review</fullName>
                </value>
                <value>
                    <fullName>Quarterly corporate performance review</fullName>
                </value>
                <value>
                    <fullName>Quarterly dealer webinar</fullName>
                </value>
                <value>
                    <fullName>Monthly custom reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_Adjustment_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Margin Adjustment Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Margin_Adjustment_Needed__c</fullName>
        <label>Margin Adjustment Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_Recommendation__c</fullName>
        <label>Margin Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_1__c</fullName>
        <label>Market 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_2__c</fullName>
        <label>Market 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_3__c</fullName>
        <label>Market 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Analysis_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Analysis Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Integration_Details__c</fullName>
        <label>Marketing Integration Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Metric_Views__c</fullName>
        <inlineHelpText>What are their view on these metrics in their industry (are they performing on par?)</inlineHelpText>
        <label>Metric Views</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetroPages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MetroPages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metro_Area_Location__c</fullName>
        <inlineHelpText>The most accurate description of the clients desired target area(s).  e.g. Chicago Metro or Peoria, Phoenix and Scottsdale.</inlineHelpText>
        <label>Metro/Locations</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Metropage_Recommendation__c</fullName>
        <inlineHelpText>attach spreadsheet and provide summary</inlineHelpText>
        <label>Metropage Recommendation</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Metropages_Required__c</fullName>
        <label>Metropages Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only use this box if this will be a nationally run campaign.</inlineHelpText>
        <label>National Campaign</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>